// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email and double Password fields group custom auth component Matching passwords is invalid 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="Aa123qwertz@"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value="notmatching"
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Matching passwords is valid 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="Aa123qwertz@"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value="Aa123qwertz@"
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password cannot contain spaces error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="Aa 1234@"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password is too long error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password is too short error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="1234567"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password must contain a lowercase error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="ABC1234@"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password must contain a number error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="AaAaAaA@"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password must contain a special char error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="Aa123456"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Password must contain an uppercase error 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value="abc1234@"
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;

exports[`Email and double Password fields group custom auth component Renders correctly 1`] = `
<div>
  <form
    method="POST"
  >
    <div>
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value=""
        />
      </label>
    </div>
    <div
      class="mt-8"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            auth.signIn.passwordRepeat.label
          </span>
        </span>
        <input
          class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="passwordRepeat"
          placeholder="auth.signIn.passwordRepeat.placeholder"
          type="password"
          value=""
        />
      </label>
    </div>
  </form>
</div>
`;
